--- a/gb/18/10/27/n10812419.md
+++ b/gb/18/10/27/n10812419.md
@@ -1,16 +1,16 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ayxrqc3762/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ayxrqc3762/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ayxrqc3762/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ayxrqc3762/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ayxrqc3762/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ayxrqc3762/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ayxrqc3762/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ayxrqc3762/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ayxrqc3762/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ayxrqc3762/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ayxrqc3762/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ayxrqc3762/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ayxrqc3762/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ayxrqc3762/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ayxrqc3762/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ayxrqc3762/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ayxrqc3762/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ayxrqc3762/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ayxrqc3762/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ayxrqc3762/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ayxrqc3762/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ayxrqc3762/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ayxrqc3762/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ayxrqc3762/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ayxrqc3762/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ayxrqc3762/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ayxrqc3762/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ayxrqc3762/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ayxrqc3762/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ayxrqc3762/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ayxrqc3762/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ayxrqc3762/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ayxrqc3762/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ayxrqc3762/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ayxrqc3762/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ayxrqc3762/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ayxrqc3762/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ayxrqc3762/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ayxrqc3762/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ayxrqc3762/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ayxrqc3762/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ayxrqc3762/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ayxrqc3762/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ayxrqc3762/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ayxrqc3762/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ayxrqc3762/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ayxrqc3762/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/xsumwp3307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/xsumwp3307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/xsumwp3307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>重庆幼儿园砍人案 目击者被迫发声明澄清</h2>
-
+<a href="https://d12gl57lrewmhb.cloudfront.net/A7sroQpAl"><img width="600" src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
 <h6></h6>
 <hr>
-	<p>【大纪元2018年10月27日讯】（大纪元记者骆亚采访报导）10月27日上午9点半左右，<ahref="https://github.com/ayxrqc3762/djy/blob/master/gb/tag/%E9%87%8D%E5%BA%86.md#1">重庆</a><ahref="https://github.com/ayxrqc3762/djy/blob/master/gb/tag/%E5%B7%B4%E5%8D%97%E5%8C%BA.md#1">巴南区</a><ahref="https://github.com/ayxrqc3762/djy/blob/master/gb/tag/%E9%B1%BC%E6%B4%9E%E6%96%B0%E4%B8%96%E7%BA%AA%E5%B9%BC%E5%84%BF%E5%9B%AD.md#1">鱼洞新世纪幼儿园</a>发生十多名幼童被砍的血腥事件，震惊整个社会，有现场目击者第一时间将现场<ahref="https://github.com/ayxrqc3762/djy/blob/master/gb/tag/%E8%A7%86%E9%A2%91.md#1">视频</a>放到网上，目前遭警方的各种压力要求其删除相关内容，该网友不得不发声明说，他认为关键是<ahref="https://github.com/ayxrqc3762/djy/blob/master/gb/tag/%E5%B9%BC%E5%84%BF%E5%9B%AD.md#1">幼儿园</a>安保亟待解决。</p>
-<p>昨天，<ahref="https://github.com/ayxrqc3762/djy/blob/master/gb/tag/%E9%87%8D%E5%BA%86.md#1">重庆</a>发生的这起一妇女报复社会的恶性事件，导致当地一所<ahref="https://github.com/ayxrqc3762/djy/blob/master/gb/tag/%E5%B9%BC%E5%84%BF%E5%9B%AD.md#1">幼儿园</a>的14名幼儿惨遭严重伤害。暴露出的幼儿园安全隐患问题，引起社会巨大反响。</p>
-<p>被砍的幼童中，危重的至少六人，其中三名被安置在重庆医院附一院，一名被安置在重庆市儿童医院。有两名被砍到颈动脉的，其中的女童当时被送到重庆市<ahref="https://github.com/ayxrqc3762/djy/blob/master/gb/tag/%E5%B7%B4%E5%8D%97%E5%8C%BA.md#1">巴南区</a>人民医院时，已经是大出血后处于失血性休克了，医院当时就给出了病危通知，一直在抢救之中；其中的男童，除颈动脉破裂外，皮肤多处被砍伤、裂开口子。</p>
+	<p>【大纪元2018年10月27日讯】（大纪元记者骆亚采访报导）10月27日上午9点半左右，<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E9%87%8D%E5%BA%86.md#1">重庆</a><ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E5%B7%B4%E5%8D%97%E5%8C%BA.md#1">巴南区</a><ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E9%B1%BC%E6%B4%9E%E6%96%B0%E4%B8%96%E7%BA%AA%E5%B9%BC%E5%84%BF%E5%9B%AD.md#1">鱼洞新世纪幼儿园</a>发生十多名幼童被砍的血腥事件，震惊整个社会，有现场目击者第一时间将现场<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E8%A7%86%E9%A2%91.md#1">视频</a>放到网上，目前遭警方的各种压力要求其删除相关内容，该网友不得不发声明说，他认为关键是<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E5%B9%BC%E5%84%BF%E5%9B%AD.md#1">幼儿园</a>安保亟待解决。</p>
+<p>昨天，<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E9%87%8D%E5%BA%86.md#1">重庆</a>发生的这起一妇女报复社会的恶性事件，导致当地一所<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E5%B9%BC%E5%84%BF%E5%9B%AD.md#1">幼儿园</a>的14名幼儿惨遭严重伤害。暴露出的幼儿园安全隐患问题，引起社会巨大反响。</p>
+<p>被砍的幼童中，危重的至少六人，其中三名被安置在重庆医院附一院，一名被安置在重庆市儿童医院。有两名被砍到颈动脉的，其中的女童当时被送到重庆市<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E5%B7%B4%E5%8D%97%E5%8C%BA.md#1">巴南区</a>人民医院时，已经是大出血后处于失血性休克了，医院当时就给出了病危通知，一直在抢救之中；其中的男童，除颈动脉破裂外，皮肤多处被砍伤、裂开口子。</p>
 <div class="video_fit_container epoch_player"><div class="player-container" id="player-container-39740a91-dac1-4c85-7e7c-570067e02d1a" data-id="player-39740a91-dac1-4c85-7e7c-570067e02d1a"></div></div><a src="//vs.youmaker.com/assets/player/39740a91-dac1-4c85-7e7c-570067e02d1a?r=16x9&amp;s=1280x720&&api=7&logo=true&url=https%3A%2F%2Fwww.epochtimes.com%2Fgb%2F18%2F10%2F27%2Fn10812419.md#1"></a>
 <p>巴南区人民医院救治的幼童最多，有9名，他们分别被安置在骨科4人、2人普外科、一名肝胆外科、一名神经外科、一名口腔科。也有男童被砍颚骨，还有女童被砍半边脸。剩下的受伤幼童基本情况都差不多，都是皮肤裂伤，皮肤软组织被刀砍伤。</p>
-<p>案发后，警方在幼儿园附近设立警戒线，并用大喇叭向民众喊话，不要停留附近围观，让民众都回家去。从当时传出的<ahref="https://github.com/ayxrqc3762/djy/blob/master/gb/tag/%E8%A7%86%E9%A2%91.md#1">视频</a>来看，警方抓着这个凶犯时，不少民众忍不住对其动手，痛打她，想为幼童们讨回一点公道。</p>
+<p>案发后，警方在幼儿园附近设立警戒线，并用大喇叭向民众喊话，不要停留附近围观，让民众都回家去。从当时传出的<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E8%A7%86%E9%A2%91.md#1">视频</a>来看，警方抓着这个凶犯时，不少民众忍不住对其动手，痛打她，想为幼童们讨回一点公道。</p>
 <div class="video_fit_container epoch_player"><div class="player-container" id="player-container-2df4710e-722c-4d25-5881-fdaf6a43cf35" data-id="player-2df4710e-722c-4d25-5881-fdaf6a43cf35"></div></div><a src="//vs.youmaker.com/assets/player/2df4710e-722c-4d25-5881-fdaf6a43cf35?r=16x9&amp;s=1280x720&&api=7&logo=true&url=https%3A%2F%2Fwww.epochtimes.com%2Fgb%2F18%2F10%2F27%2Fn10812419.md#1"></a>
 <p>有网友表示：“这个女人也太下得去手了。中国共产党都把人的道德快摧残完了，什么社会、什么人性！”</p>
 <p>也有网友不敢置信地表示：“太残忍太可怕了！那凶手自己没有孩子吗？！怎么能下这样的毒手！”“无法理解这些狂人的内心。冤有头债有主，为什么要去摧残小宝宝？”</p>
@@ -25,44 +25,44 @@
 <p>责任编辑：刘毅</p>
 	
 <hr>
-
+<hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/ayxrqc3762/djy/blob/master/gb/10/5/11/n2904197.md#1">林保华：残杀与欺压弱者的中国民族性</a></li>
-<li><a href="https://github.com/ayxrqc3762/djy/blob/master/gb/10/5/12/n2905703.md#1">中国又发生校园袭击 七名幼童被砍死</a></li>
-<li><a href="https://github.com/ayxrqc3762/djy/blob/master/gb/17/1/4/n8665413.md#1">广西凭祥一男子翻墙入幼儿园 砍伤11名幼儿</a></li>
-<li><a href="https://github.com/ayxrqc3762/djy/blob/master/gb/17/2/25/n8849042.md#1">陕西绥德精神患者杀人 警察畏缩遭网络炮轰</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/10/5/11/n2904197.md#1">林保华：残杀与欺压弱者的中国民族性</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/10/5/12/n2905703.md#1">中国又发生校园袭击 七名幼童被砍死</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/17/1/4/n8665413.md#1">广西凭祥一男子翻墙入幼儿园 砍伤11名幼儿</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/17/2/25/n8849042.md#1">陕西绥德精神患者杀人 警察畏缩遭网络炮轰</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/ayxrqc3762/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/22/n11133337.md#1" target="_blank">林辉：质疑文革 红卫兵头目被摘肾暴尸</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/6/n11237722.md#1" target="_blank">美国麻州众议院颁发褒奖状 祝贺法轮大法日</a></li>
-<hr>
+<li><a href="https://github.com/ychojm359/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/28/n10179177.md#1" target="_blank">名为开放实为开抢的邓小平理论 (上)</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/5/n10830342.md#1" target="_blank">走出磨难 费城女医生找到真正的自我</a></li><hr>
+
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/ayxrqc3762/djy/blob/master/gb/21/4/8/n12867405.md#1">【未解之谜】远古科技：20亿年前核反应堆</a></li>
-<li><a href="https://github.com/ayxrqc3762/djy/blob/master/gb/21/4/6/n12861114.md#1">自称死过三次 女网红：人死后时间变得很慢</a></li>
-<li><a href="https://github.com/ayxrqc3762/djy/blob/master/gb/21/4/11/n12872178.md#1">英国羊群排成神秘的“麦田圈” 令人费解</a></li>
-<li><a href="https://github.com/ayxrqc3762/djy/blob/master/gb/21/4/5/n12858316.md#1">原本命中无子，他做了什么事？连生11个儿子</a></li>
-<li><a href="https://github.com/ayxrqc3762/djy/blob/master/gb/21/4/6/n12862138.md#1">【未解之谜】“妈妈我记得你” 神奇的胎内记忆</a></li>
-<li><a href="https://github.com/ayxrqc3762/djy/blob/master/gb/21/4/12/n12875771.md#1">【秦鹏直播】美芯片峰会独缺中企 加速脱钩？</a></li>
-<li><a href="https://github.com/ayxrqc3762/djy/blob/master/gb/21/4/13/n12876033.md#1">《意外》观众反响热烈：《转法轮》救赎灵魂</a></li>
-<li><a href="https://github.com/ayxrqc3762/djy/blob/master/gb/21/4/12/n12874883.md#1">【微视频】比特币大涨有因 中共严控国人购外币</a></li>
-<li><a href="https://github.com/ayxrqc3762/djy/blob/master/gb/21/4/11/n12871868.md#1">【横河观点】美国制裁才知中国超级电脑有假</a></li>
-<li><a href="https://github.com/ayxrqc3762/djy/blob/master/gb/21/4/10/n12870566.md#1">美特种作战部队将对中共发动信息战</a></li>
-<li><a href="https://github.com/ayxrqc3762/djy/blob/master/gb/21/3/31/n12847306.md#1">分析：遏制中共入侵 美可在台湾设“绊索”</a></li>
-<li><a href="https://github.com/ayxrqc3762/djy/blob/master/gb/21/4/11/n12872829.md#1">与梁朝伟当年同试镜 周星驰落选原因笑翻网友</a></li>
-<li><a href="https://github.com/ayxrqc3762/djy/blob/master/gb/21/4/11/n12873058.md#1">好莱坞巨星史泰龙 加入川普私人俱乐部</a></li>
-<li><a href="https://github.com/ayxrqc3762/djy/blob/master/gb/21/4/11/n12872163.md#1">周华健开唱合体齐豫 带领歌迷重温武侠经典</a></li>
-<li><a href="https://github.com/ayxrqc3762/djy/blob/master/gb/21/4/12/n12875411.md#1">遭中共封杀 赵婷《无依之地》获英奥斯卡四奖</a></li>
-<li><a href="https://github.com/ayxrqc3762/djy/blob/master/gb/21/4/10/n12871113.md#1">想和伙伴一起跳的青春歌曲 BTS与TWICE等入榜</a></li>
-<li><a href="https://github.com/ayxrqc3762/djy/blob/master/gb/21/4/11/n12872178.md#1">英国羊群排成神秘的“麦田圈” 令人费解</a></li>
-<li><a href="https://github.com/ayxrqc3762/djy/blob/master/gb/21/4/10/n12871349.md#1">40岁后代谢下降变胖？5种食物吃出代谢力</a></li>
-<li><a href="https://github.com/ayxrqc3762/djy/blob/master/gb/21/4/10/n12870791.md#1">谷歌地图乱带路 害印尼男子差点娶错老婆</a></li>
-<li><a href="https://github.com/ayxrqc3762/djy/blob/master/gb/21/4/10/n12871005.md#1">奇特兔子不会跑跳 却会倒立行走</a></li>
-<li><a href="https://github.com/ayxrqc3762/djy/blob/master/gb/21/4/10/n12871254.md#1">【重播】新冠感染传染期是多少天？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/4/20/n13716382.md#1">【百年真相】打抱不平的侠女 为何被枪杀取肾？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/15/n13737123.md#1">一曲《梅花》为何总让人禁不住热泪盈眶</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738009.md#1">【未解之谜】动物的超能力</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/13/n13734962.md#1">【未解之谜】霍皮预言“大净化” 毁灭与希望同在？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/4/n13726629.md#1">【命相漫谈】怎么说“财多如何不发财？”</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13739874.md#1">【马克时空】德国“俄梦”初醒？ 援乌防空导弹、自走炮</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13740139.md#1">【神韵早期节目】唐阵（2013）</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13740247.md#1">【新闻看点】上海被爆加强封控 居委弄虚作假</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739318.md#1">备战台海 广东高层会议秘密录音曝光</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738761.md#1">获妈妈沈殿霞赠家传首饰 郑欣宜望代代相传</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739256.md#1">李克强讲话“上墙”党媒争相报 释何信号</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738761.md#1">获妈妈沈殿霞赠家传首饰 郑欣宜望代代相传</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13739984.md#1">任贤齐介绍田中老家 吃喝不花钱自嘲像恶霸</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739409.md#1">刘嘉玲为学霸侄子庆生 亿万身家未来或留给对方</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13739664.md#1">赵小侨怀孕30周报喜 晒孕照“想得更多祝福 ”</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739444.md#1">陈晓旭去世15周年 薛宝钗扮演者张莉贴照缅怀</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739418.md#1">癌细胞没它会饿死？1个防癌绝佳方法 人人能做到</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13739808.md#1">搭飞机如何穿衣服比较好？ 空服员分享经验</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/13/n13735397.md#1">心脏衰竭比癌症更致命！年轻也出现 3症状要警惕</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/14/n13736831.md#1">11种营养和饮食 改善成人过动症</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/14/n13736847.md#1">9大体质快看你是哪种？教你调回最佳体质</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ayxrqc3762/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ayxrqc3762/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/10/27/n10812419.htm">重庆幼儿园砍人案 目击者被迫发声明澄清</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/10/27/n10812419.htm">重庆幼儿园砍人案 目击者被迫发声明澄清</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ayxrqc3762/djy/blob/master/gb/18/10/27/n10812419.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ayxrqc3762/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ayxrqc3762/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ayxrqc3762/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ayxrqc3762/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ayxrqc3762/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ayxrqc3762/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ayxrqc3762/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ayxrqc3762/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ayxrqc3762/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ayxrqc3762/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ayxrqc3762/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ayxrqc3762/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ayxrqc3762/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ayxrqc3762/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ayxrqc3762/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ayxrqc3762/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ayxrqc3762/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ayxrqc3762/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ayxrqc3762/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ayxrqc3762/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ayxrqc3762/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ayxrqc3762/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ayxrqc3762/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ayxrqc3762/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ayxrqc3762/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ayxrqc3762/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ayxrqc3762/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ayxrqc3762/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ayxrqc3762/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ayxrqc3762/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ayxrqc3762/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ayxrqc3762/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ayxrqc3762/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ayxrqc3762/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ayxrqc3762/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ayxrqc3762/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ayxrqc3762/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ayxrqc3762/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ayxrqc3762/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ayxrqc3762/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ayxrqc3762/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ayxrqc3762/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ayxrqc3762/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ayxrqc3762/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ayxrqc3762/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ayxrqc3762/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ayxrqc3762/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ayxrqc3762/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/xsumwp3307/djy/blob/master/gb/18/10/27/n10812419.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/xsumwp3307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/xsumwp3307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
