--- a/gb/22/5/17/n13739350.md
+++ b/gb/22/5/17/n13739350.md
@@ -167,7 +167,7 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/ychojm359/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/6/n10195043.md#1" target="_blank">袁斌：中共“苏维埃共和国”的专制实验</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/4/n10023623.md#1" target="_blank">车祸后30年行走困难 读《转法轮》4个月“开跑”</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/30/n11290434.md#1" target="_blank">【征文】爱德华：金门战役共军惨败之迷</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/4/11/n7543764.md#1" target="_blank">军转干部感恩法轮大法给了第二次生命</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
