--- a/gb/22/5/17/n13739350.md
+++ b/gb/22/5/17/n13739350.md
@@ -167,7 +167,7 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/ychojm359/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/2/22/n11888452.md#1" target="_blank">“土改”和“文革”时的离奇报应</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/15/n10977742.md#1" target="_blank">伊朗姑娘嘉扎尔?塔瓦纳艾(2) 历练的旅程</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/20/1/6/n11772347.md#1" target="_blank">一本“千古奇书” 结缘世界各族裔亿万人</a> </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/21/n10992365.md#1" target="_blank">殷毅：我在右派专列上</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/29/n11288413.md#1" target="_blank">超越人生苦难 女教授从80岁回到60岁</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
