--- a/gb/22/5/17/n13739350.md
+++ b/gb/22/5/17/n13739350.md
@@ -167,7 +167,7 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/ychojm359/ntdtv/blob/master/gb/2022/05/01/a103414939.md#1" target="_blank">加拿大20市镇升旗亮灯 祝贺法轮大法传世30年</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/9/n10129004.md#1" target="_blank">袁斌：中共早期“革命史”的真相（2）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/3/16/n8928422.md#1" target="_blank">一位伊朗女子的东方缘</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/16/n10061771.md#1" target="_blank">共产暴政录：拼音化与简化汉字</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/31/n11292679.md#1" target="_blank">美国国务院将对迫害法轮功者 严格审核签证</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
