--- a/gb/22/5/17/n13739350.md
+++ b/gb/22/5/17/n13739350.md
@@ -167,7 +167,7 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/ychojm359/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/16/n10061771.md#1" target="_blank">共产暴政录：拼音化与简化汉字</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/31/n11292679.md#1" target="_blank">美国国务院将对迫害法轮功者 严格审核签证</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/13/n10711194.md#1" target="_blank">“富田兵变”遭镇压 尸体填满整个山沟</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/24/n11406694.md#1" target="_blank">美国会吁中共释放法轮功学员 邓翠苹女儿感谢</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
